add note functions

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="list">
-    <div *ngFor="let fakeNote of fakeNoteList; index as i" class="item" [ngClass]="{'active': activeNote == i}" (click)="active(i)">
-        <div class="content">{{fakeNote.description}}</div>
-        <div class="delete" (click)="delete(i)"></div>
+    <div *ngFor="let note of noteList" class="item" [ngClass]="{'active': activeNote == note.id}" (click)="active(note.id)">
+        <div class="content">{{note.title}}</div>
+        <div class="delete" (click)="delete(note.id)"></div>
     </div>
 </div>
