--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,3 +1,4 @@
-<div>
-  <app-note></app-note>
+<div #noteBoard>
+  <app-note #note *ngIf="bNewNoteShow" [note]="newNote"></app-note>
+  <app-note *ngFor="let note of notes" [note]="note"></app-note>
 </div>
