--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,5 +1,18 @@
-<input type="text" (dblclick)="turnOnEditMode()" [readonly]="isReadonly" [(ngModel)]="note.summary" (keypress)="onKeypress($event)">
-<input type="color" *ngIf="!isReadonly" [(ngModel)]="note.color">
-<div>
-    <textarea [readonly]="isReadonly" (dblclick)="turnOnEditMode()" cdkTextareaAutosize (keydown)="onKeypress($event)" [(ngModel)]="note.content"></textarea>
+<div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y"
+ [style.background-color]="note.color" [style.z-index]="note.z">
+    <div class="note-header"></div>
+    <div class="note-content">
+    <table><tr><td>
+    <input type="text" (dblclick)="turnOnEditMode()" [readonly]="isReadonly" [(ngModel)]="note.summary" (keypress)="onKeypress($event)">
+    </td></tr>
+    <tr><td>
+    <input type="color" *ngIf="!isReadonly" [(ngModel)]="note.color">
+    </td></tr>
+    <tr><td>
+    <div>
+        <textarea [readonly]="isReadonly" (dblclick)="turnOnEditMode()" cdkTextareaAutosize (keydown)="onKeypress($event)" [(ngModel)]="note.content"></textarea>
+    </div>
+    </td></tr>
+    </table>
+    </div>
 </div>
