[Summary] remove fake note from board and change keypress to keydown in note.component.html [Type] fix [Scope] note, board [Bug] [Phenomemon]
[Reason]

[Changes]

[Announcement]

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -4,7 +4,7 @@
         <table>
             <tr>
                 <td>
-                    <input type="text" (dblclick)="turnOnEditMode()" [readonly]="isReadonly" [(ngModel)]="title" (keypress)="onKeydown($event)">
+                    <input type="text" (dblclick)="turnOnEditMode()" [readonly]="isReadonly" [(ngModel)]="title" (keydown)="onKeydown($event)">
                 </td>
             </tr>
             <tr>
