--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,5 +1,5 @@
 <div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y" [style.background-color]="note.color" [style.z-index]="note.z">
-    <div class="note-header"></div>
+    <div #noteHeader class="note-header"></div>
     <div class="note-content">
         <table>
             <tr>
