[Summary] fix edit note issue [Type] fix [Scope] [Bug] [Phenomemon]
[Reason]

[Changes]

[Announcement]

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,5 +1,5 @@
 
-<div #noteBoard>
-  <app-note #note *ngIf="bNewNoteShow" [note]="newNote"></app-note>
-  <app-note *ngFor="let note of notes" [note]="note"></app-note>
+<div #noteBoard id="noteBoard">
+  <app-note #note *ngIf="bNewNoteShow" [note]="newNote" [isCreate]="true"></app-note>
+  <app-note *ngFor="let note of notes" [note]="note" [isCreate]="false"></app-note>
 </div>
