--- a/src/app/note/note.component.css
+++ b/src/app/note/note.component.css
@@ -4,12 +4,14 @@ p {
 .note-content {
     width: 100%;
     border: 1px groove grey;
+    border-width: thin;
 }
 .note-header {
     width: 100%;
     height: 1rem;
     border: 1px groove grey;
     border-bottom: 0px;
+    border-width: thin;
 }
 .note {
     width: 150px;
