--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,4 +1,4 @@
-<div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y" [style.background-color]="note.color" [style.z-index]="note.z">
+<div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y" [style.background-color]="color" [style.z-index]="note.z">
     <div #noteHeader class="note-header"></div>
     <div class="note-content">
         <table>
@@ -6,14 +6,12 @@
                 <td>
                     <input type="text" (dblclick)="turnOnEditMode()" [readonly]="isReadonly" [(ngModel)]="title" (keydown)="onKeydown($event)">
                 </td>
-            </tr>
-            <tr>
                 <td>
-                    <input type="color" *ngIf="!isReadonly" [(ngModel)]="color">
+                    <input #noteColor class="note-color" type="color" [(ngModel)]="color">
                 </td>
             </tr>
             <tr>
-                <td>
+                <td colspan="2">
                     <div>
                         <textarea #noteContent [readonly]="isReadonly" (dblclick)="turnOnEditMode()" cdkTextareaAutosize (keydown)="onKeydown($event)" [(ngModel)]="content" appAutoSize></textarea>
                     </div>
