--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,4 +1,4 @@
-<div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y" [style.background-color]="color" [style.z-index]="note.z">
+<div #myNote class="note" [style.left.px]="note.x" [style.top.px]="note.y" [style.background-color]="color" [style.z-index]="note.z" [ngClass]="{'read': isReadonly}">
     <div #noteHeader class="note-header"></div>
     <div class="note-content">
         <table>
