--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -1,4 +1,13 @@
-div {
+.board {
+    position: relative;
     background-color: gainsboro;
     height: 100vh;
+}
+
+.note {
+    position: absolute;
+}
+
+.new {
+    z-index: 9999999;
 }
