--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,8 @@
-<div #noteBoard id="noteBoard">
-  <app-note #newNoteElemt id="newNote" (newNoteHide)="newNoteReset()" [hidden]="!bNewNoteShow" [isContentFocus]="bContentFocus" [note]="newNote" [isCreate]="true"></app-note>
-  <app-note *ngFor="let note of notes" (newNoteHide)="newNoteReset()" (focus)="updateOrder(note.id)" [note]="note" [isCreate]="false"></app-note>
+<div #noteBoard class="board" (click)="click($event)">
+    <div #newNoteElement class="note new" [style.left.px]="newNote.x" [style.top.px]="newNote.y" [hidden]="!bNewNoteShow">
+        <app-note [note]="newNote" [isCreate]="true"></app-note>
+    </div>
+    <div class="note" *ngFor="let note of notes" [style.left.px]="note.x" [style.top.px]="note.y" [style.z-index]="note.z">
+        <app-note (newNoteHide)="newNoteReset()" (focus)="updateOrder(note.id)" [note]="note" [isCreate]="false"></app-note>
+    </div>
 </div>
