--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,6 +1,6 @@
 <div #noteBoard class="board" (click)="click($event)">
     <div #newNoteElement class="note new" [style.left.px]="newNote.x" [style.top.px]="newNote.y" [hidden]="!bNewNoteShow">
-        <app-note [note]="newNote" [isCreate]="true"></app-note>
+        <app-note [note]="newNote" [isCreate]="true" [isOpen]="bNewNoteShow"></app-note>
     </div>
     <div class="note" *ngFor="let note of notes" (mousedown)="mousedown(note, $event)" [style.left.px]="note.x" [style.top.px]="note.y" [style.z-index]="note.z">
         <app-note [note]="note" [isCreate]="false"></app-note>
