[Summary] fix issue - textarea height will be taller when double click textarea in edit mode [Type] [Scope] [Bug] [Phenomemon]
[Reason]

[Changes]

[Announcement]

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -13,7 +13,7 @@
             <tr>
                 <td colspan="2">
                     <div>
-                        <textarea #noteContent [readonly]="isReadonly" (dblclick)="turnOnEditMode()" (keydown)="onKeydown($event)" [(ngModel)]="content" appAutoSize></textarea>
+                        <textarea #noteContent [readonly]="isReadonly" (dblclick)="isReadonly && turnOnEditMode()" (keydown)="!isReadonly && onKeydown($event)" [(ngModel)]="content" appAutoSize></textarea>
                     </div>
                 </td>
             </tr>
